package models;
public class Coin extends Money {
    public Coin(double value, int quantity) {
        super(value, quantity);
    }
}
